--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -51,7 +51,11 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  assets:
+    - assets/images/logo.png
 
+    - assets/icons/notification.png
+    - assets/icons/search.png
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
