--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_svg: ^2.0.17
 
 dev_dependencies:
   flutter_test:
@@ -54,8 +55,9 @@ flutter:
   assets:
     - assets/images/logo.png
 
-    - assets/icons/notification.png
-    - assets/icons/search.png
+    - assets/icons/notification.svg
+    - assets/icons/search.svg
+    - assets/icons/fullmap.svg
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
