--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_svg: ^2.0.17
   awesome_bottom_bar: ^1.2.4
   draggable_home: ^1.0.5
+  modal_bottom_sheet: ^3.0.0
 
 dev_dependencies:
   flutter_test:
