update detail laporan, penambahan asset mappin, update list laporan, listdraflaporan memakai clip behaviour

--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -74,6 +74,8 @@ flutter:
     - assets/icons/buatlaporan/folders.svg
     - assets/icons/buatlaporan/pencil-simple.svg
 
+    - assets/icons/map-pin.svg
+
   fonts:
     - family: CustomIconsBotNav
       fonts: 
