--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -29,7 +29,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   flutter:
-    sdk: flutter
+    sdk: flutter  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -38,6 +38,8 @@ dependencies:
   awesome_bottom_bar: ^1.2.4
   draggable_home: ^1.0.5
   modal_bottom_sheet: ^3.0.0
+  phosphor_flutter: ^2.1.0
+  chips_choice: ^3.0.1
 
 dev_dependencies:
   flutter_test:
@@ -57,6 +59,8 @@ dev_dependencies:
 flutter:
   assets:
     - assets/images/logo.png
+
+    - assets/icons/area_urgensi/arrow-left.svg
 
     - assets/icons/beranda/notification.svg
     - assets/icons/beranda/search.svg
