--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   modal_bottom_sheet: ^3.0.0
   phosphor_flutter: ^2.1.0
   chips_choice: ^3.0.1
+  flutter_native_splash: ^2.4.5
 
 dev_dependencies:
   flutter_test:
