--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   phosphor_flutter: ^2.1.0
   chips_choice: ^3.0.1
   flutter_native_splash: ^2.4.5
+  tutorial_coach_mark: ^1.2.13
 
 dev_dependencies:
   flutter_test:
