--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   chips_choice: ^3.0.1
   flutter_native_splash: ^2.4.5
   tutorial_coach_mark: ^1.2.13
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
