--- a/frontend/flutter_native_splash.yaml
+++ b/frontend/flutter_native_splash.yaml
@@ -1,12 +1,12 @@
 flutter_native_splash:
   color: "#FFFFFF"
-  image: assets/images/logo.png
-  branding: assets/images/logo.png
+  image: assets/images/splash/logo.png
+  branding: assets/images/splash/branding.png
 
   android_12:
-    image: assets/images/logo.png
     color: "#FFFFFF"
-    branding: assets/images/logo.png
+    image: assets/images/splash/logo.png
+    branding: assets/images/splash/branding.png
 
 
   ios: false
