--- a/frontend/android/app/src/main/AndroidManifest.xml
+++ b/frontend/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,10 @@
         android:label="BALAP-IN"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyBvTDGb2SjsVdzPWapF_NedhVg-k6e8mo0" />
+            
         <activity
             android:name=".MainActivity"
             android:exported="true"
