--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   flutter_native_splash: ^2.4.5
   tutorial_coach_mark: ^1.2.13
   shared_preferences: ^2.5.3
+  http: ^1.3.0
+  google_maps_flutter: ^2.12.1
 
 dev_dependencies:
   flutter_test:
