--- a/backend_rust/Cargo.toml
+++ b/backend_rust/Cargo.toml
@@ -12,3 +12,6 @@ dotenvy = "0.15"
 env_logger = "0.11.8"
 actix-cors = "0.7.1"
 serde_json = "1.0.140"
+aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
+aws-sdk-s3 = "1.84.0"
+tokio = { version = "1", features = ["full"] }
