--- a/backend_rust/Cargo.toml
+++ b/backend_rust/Cargo.toml
@@ -15,3 +15,4 @@ serde_json = "1.0.140"
 aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
 aws-sdk-s3 = "1.84.0"
 tokio = { version = "1", features = ["full"] }
+uuid = { version = "1.16.0", features = ["v4"] }
