--- a/backend_rust/Cargo.toml
+++ b/backend_rust/Cargo.toml
@@ -16,3 +16,4 @@ aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
 aws-sdk-s3 = "1.84.0"
 tokio = { version = "1", features = ["full"] }
 uuid = { version = "1.16.0", features = ["v4"] }
+actix-multipart = "0.7.2"
