--- a/backend_rust/Cargo.toml
+++ b/backend_rust/Cargo.toml
@@ -17,3 +17,4 @@ aws-sdk-s3 = "1.84.0"
 tokio = { version = "1", features = ["full"] }
 uuid = { version = "1.16.0", features = ["v4"] }
 actix-multipart = "0.7.2"
+chrono = "0.4.40"
