--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -29,6 +29,8 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   flutter:
+    sdk: flutter
+  flutter_localizations:
     sdk: flutter  
 
   # The following adds the Cupertino Icons font to your application.
@@ -44,6 +46,7 @@ dependencies:
   shared_preferences: ^2.5.3
   http: ^1.3.0
   google_maps_flutter: ^2.12.1
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
