--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   http: ^1.3.0
   google_maps_flutter: ^2.12.1
   intl: ^0.19.0
+  get_time_ago: ^2.3.1
 
 dev_dependencies:
   flutter_test:
