--- a/backend_rust/Cargo.toml
+++ b/backend_rust/Cargo.toml
@@ -18,3 +18,4 @@ tokio = { version = "1", features = ["full"] }
 uuid = { version = "1.16.0", features = ["v4"] }
 actix-multipart = "0.7.2"
 chrono = "0.4.40"
+regex = "1.11.1"
