--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -45,9 +45,10 @@ dependencies:
   tutorial_coach_mark: ^1.2.13
   shared_preferences: ^2.5.3
   http: ^1.3.0
-  google_maps_flutter: ^2.12.1
+  google_maps_flutter: ^2.12.2
   intl: ^0.19.0
   get_time_ago: ^2.3.1
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
