--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   intl: ^0.19.0
   get_time_ago: ^2.3.1
   image_picker: ^1.1.2
+  provider: ^6.1.5
 
 dev_dependencies:
   flutter_test:
