--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   get_time_ago: ^2.3.1
   image_picker: ^1.1.2
   provider: ^6.1.5
+  mime: ^2.0.0
+  lottie: ^3.3.1
 
 dev_dependencies:
   flutter_test:
@@ -89,6 +91,12 @@ flutter:
     - assets/icons/buatlaporan/pencil-simple.svg
 
     - assets/icons/map-pin.svg
+
+    - assets/icons/dialog/alertanimation.json
+    - assets/icons/dialog/checkanimation.json
+    - assets/icons/dialog/failedanimation.json
+    - assets/icons/dialog/processanimation.json
+    - assets/icons/dialog/draftanimation.json
 
   fonts:
     - family: CustomIconsBotNav
