update logic dispose field buat laporan

--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -99,6 +99,7 @@ flutter:
     - assets/icons/dialog/processanimation.json
     - assets/icons/dialog/draftanimation.json
     - assets/icons/dialog/deletedraftanim.json
+    - assets/icons/dialog/loaddrafanim.json
 
   fonts:
     - family: CustomIconsBotNav
