--- a/backend_rust/Cargo.toml
+++ b/backend_rust/Cargo.toml
@@ -19,3 +19,5 @@ uuid = { version = "1.16.0", features = ["v4"] }
 actix-multipart = "0.7.2"
 chrono = "0.4.40"
 regex = "1.11.1"
+shuttle-actix-web = "0.55.0"
+shuttle-runtime = "0.55.0"
