--- a/backend_django/requirements.txt
+++ b/backend_django/requirements.txt
@@ -24,13 +24,18 @@ django-timezone-field==7.1
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
 dnspython==2.7.0
+geographiclib==2.0
+geopy==2.4.1
 hyperlink==21.0.0
 idna==3.10
 incremental==24.7.2
+joblib==1.5.1
 kombu==5.5.4
 mongoengine==0.29.1
 msgpack==1.1.1
+numpy==2.3.1
 packaging==25.0
+pandas==2.3.0
 prompt_toolkit==3.0.51
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
@@ -41,11 +46,15 @@ pyOpenSSL==25.1.0
 python-crontab==3.2.0
 python-dateutil==2.9.0.post0
 python-decouple==3.8
+pytz==2025.2
 redis==6.2.0
+scikit-learn==1.7.0
+scipy==1.16.0
 service-identity==24.2.0
 setuptools==80.9.0
 six==1.17.0
 sqlparse==0.5.3
+threadpoolctl==3.6.0
 Twisted==25.5.0
 txaio==23.1.1
 typing_extensions==4.14.0
