--- a/backend_django/requirements.txt
+++ b/backend_django/requirements.txt
@@ -1,13 +1,18 @@
 amqp==5.3.1
+anyio==4.9.0
 asgiref==3.8.1
 attrs==25.3.0
 autobahn==24.4.2
 Automat==25.4.16
 billiard==4.2.1
+CacheControl==0.14.3
+cachetools==5.5.2
 celery==5.5.3
+certifi==2025.6.15
 cffi==1.17.1
 channels==4.2.2
 channels_redis==4.2.1
+charset-normalizer==3.4.2
 click==8.2.1
 click-didyoumean==0.3.1
 click-plugins==1.1.1
@@ -24,8 +29,28 @@ django-timezone-field==7.1
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
 dnspython==2.7.0
+firebase-admin==6.9.0
 geographiclib==2.0
 geopy==2.4.1
+google-api-core==2.25.1
+google-api-python-client==2.173.0
+google-auth==2.40.3
+google-auth-httplib2==0.2.0
+google-cloud-core==2.4.3
+google-cloud-firestore==2.21.0
+google-cloud-storage==3.1.1
+google-crc32c==1.7.1
+google-resumable-media==2.7.2
+googleapis-common-protos==1.70.0
+grpcio==1.73.0
+grpcio-status==1.73.0
+h11==0.16.0
+h2==4.2.0
+hpack==4.1.0
+httpcore==1.0.9
+httplib2==0.22.0
+httpx==0.28.1
+hyperframe==6.1.0
 hyperlink==21.0.0
 idna==3.10
 incremental==24.7.2
@@ -37,28 +62,36 @@ numpy==2.3.1
 packaging==25.0
 pandas==2.3.0
 prompt_toolkit==3.0.51
+proto-plus==1.26.1
+protobuf==6.31.1
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pycparser==2.22
 PyJWT==2.9.0
 pymongo==4.13.2
 pyOpenSSL==25.1.0
+pyparsing==3.2.3
 python-crontab==3.2.0
 python-dateutil==2.9.0.post0
 python-decouple==3.8
 pytz==2025.2
 redis==6.2.0
+requests==2.32.4
+rsa==4.9.1
 scikit-learn==1.7.0
 scipy==1.16.0
 service-identity==24.2.0
 setuptools==80.9.0
 six==1.17.0
+sniffio==1.3.1
 sqlparse==0.5.3
 threadpoolctl==3.6.0
 Twisted==25.5.0
 txaio==23.1.1
 typing_extensions==4.14.0
 tzdata==2025.2
+uritemplate==4.2.0
+urllib3==2.5.0
 vine==5.1.0
 wcwidth==0.2.13
 zope.interface==7.2
