--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -1,5 +1,5 @@
-name: frontend
-description: "A new Flutter project."
+name: balapin
+description: "Batam Road Infrastructure Reporting Systems."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -53,6 +53,7 @@ dependencies:
   mime: ^2.0.0
   lottie: ^3.3.1
   uuid: ^4.5.1
+  firebase_messaging: ^15.2.7
 
 dev_dependencies:
   flutter_test:
