--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   lottie: ^3.3.1
   uuid: ^4.5.1
   firebase_messaging: ^15.2.7
+  firebase_core: ^3.14.0
+  flutter_local_notifications: ^19.3.0
 
 dev_dependencies:
   flutter_test:
