--- a/backend_django/requirements.txt
+++ b/backend_django/requirements.txt
@@ -29,7 +29,9 @@ django-timezone-field==7.1
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
 dnspython==2.7.0
+filelock==3.18.0
 firebase-admin==6.9.0
+fsspec==2025.5.1
 geographiclib==2.0
 geopy==2.4.1
 google-api-core==2.25.1
@@ -50,14 +52,19 @@ hpack==4.1.0
 httpcore==1.0.9
 httplib2==0.22.0
 httpx==0.28.1
+huggingface-hub==0.33.1
 hyperframe==6.1.0
 hyperlink==21.0.0
 idna==3.10
 incremental==24.7.2
+Jinja2==3.1.6
 joblib==1.5.1
 kombu==5.5.4
+MarkupSafe==3.0.2
 mongoengine==0.29.1
+mpmath==1.3.0
 msgpack==1.1.1
+networkx==3.5
 numpy==2.3.1
 packaging==25.0
 pandas==2.3.0
@@ -75,9 +82,13 @@ python-crontab==3.2.0
 python-dateutil==2.9.0.post0
 python-decouple==3.8
 pytz==2025.2
+PyYAML==6.0.2
 redis==6.2.0
+regex==2024.11.6
 requests==2.32.4
 rsa==4.9.1
+safetensors==0.5.3
+Sastrawi==1.0.1
 scikit-learn==1.7.0
 scipy==1.16.0
 service-identity==24.2.0
@@ -85,7 +96,12 @@ setuptools==80.9.0
 six==1.17.0
 sniffio==1.3.1
 sqlparse==0.5.3
+sympy==1.13.1
 threadpoolctl==3.6.0
+tokenizers==0.21.2
+torch==2.6.0
+tqdm==4.67.1
+transformers==4.52.4
 Twisted==25.5.0
 txaio==23.1.1
 typing_extensions==4.14.0
