UPDATE after classification going to upload to the database

--- a/backend_django/.gitignore
+++ b/backend_django/.gitignore
@@ -35,6 +35,5 @@ Thumbs.db
 .ipynb_checkpoints/
 
 *__pycache__
-./model/model_files/integrated_abusive_classifier_v2.pth
-.\model\model_files\integrated_abusive_classifier_v2.pth
-backend_django\model\model_files\integrated_abusive_classifier_v2.pth
+
+integrated_abusive_classifier_v2.pth
