--- a/backend_django/docker-compose.yml
+++ b/backend_django/docker-compose.yml
@@ -52,16 +52,23 @@ services:
   #   depends_on:
   #     - django 
 
-  nginx:
-    image: nginx:latest
-    container_name: nginx
+  # nginx:
+  #   image: nginx:latest
+  #   container_name: nginx
+  #   restart: unless-stopped
+  #   ports:
+  #     - "80:80"
+  #     - "443:443"
+  #   volumes:
+  #     - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+  #     - /etc/letsencrypt:/etc/letsencrypt:ro
+  #     - /var/lib/letsencrypt:/var/lib/letsencrypt
+  #   depends_on:
+  #     - django
+
+  cloudflared:
+    image: cloudflare/cloudflared:latest
     restart: unless-stopped
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - /etc/letsencrypt:/etc/letsencrypt:ro
-      - /var/lib/letsencrypt:/var/lib/letsencrypt
+    command: tunnel --url django:8000 --no-autoupdate run --token eyJhIjoiZDE2NDIwMTU3NzIxYTljNmYzMWQzNjE1NDE3ZmViYjkiLCJzIjoiMUR2V3RJUklaQ1oybTNyVDRKUDNWSEV5TG52SEQyV29lVU94QjMycE53UT0iLCJ0IjoiNDQ3MmY4YjYtMTA2Ny00YWU4LTg1ZTMtMDcxOTg2NjQzMTUyIn0=
     depends_on:
       - django
