--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   firebase_messaging: ^15.2.7
   firebase_core: ^3.14.0
   flutter_local_notifications: ^19.3.0
+  geolocator: ^14.0.1
 
 dev_dependencies:
   flutter_test:
