--- a/backend_rust/Cargo.toml
+++ b/backend_rust/Cargo.toml
@@ -20,5 +20,5 @@ actix-multipart = "0.7.2"
 chrono = "0.4.40"
 regex = "1.11.1"
 shuttle-actix-web = "0.55.0"
-shuttle-runtime = "0.55.0"
+shuttle-runtime = { version = "0.55.0", features = ["setup-otel-exporter"] }
 reqwest = { version = "0.12.20", features = ["json"] }
