--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -57,6 +57,8 @@ dependencies:
   firebase_core: ^3.14.0
   flutter_local_notifications: ^19.3.0
   geolocator: ^14.0.1
+  mockito: ^5.4.2
+  http_mock_adapter: ^0.6.0
 
 dev_dependencies:
   flutter_test:
